# fatx

./: CMakeLists.txt  Makefile
.github/workflows/: build.yml
fatxfs/: CMakeLists.txt
libfatx/: CMakeLists.txt  libfatx.pc.in  libfatxConfig.cmake.in
